Closed
Bug 629860
Opened 15 years ago
Closed 15 years ago
Closing in Full Screen mode then Relaunching FF causes repaint issues
Categories
(Core :: Graphics, defect)
Tracking
()
VERIFIED
FIXED
Tracking | Status | |
---|---|---|
blocking2.0 | --- | final+ |
People
(Reporter: tam.gary, Assigned: jimm)
References
Details
(Keywords: regression, Whiteboard: [softblocker])
Attachments
(5 files, 1 obsolete file)
247.65 KB,
image/png
|
Details | |
1.81 MB,
image/png
|
Details | |
42.40 KB,
image/jpeg
|
Details | |
809 bytes,
patch
|
vlad
:
review+
|
Details | Diff | Splinter Review |
880 bytes,
patch
|
joe
:
approval2.0+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 5.1; rv:2.0b10) Gecko/20100101 Firefox/4.0b10
Build Identifier: Mozilla/5.0 (Windows NT 5.1; rv:2.0b10) Gecko/20100101 Firefox/4.0b10
Use Firefox in fullscreen mode, close the window, relaunch Firefox, then minimize causes repaint issues. When relaunching Firefox, it opens up in fullscreen mode like the last state, but when I minimize it, I can see bits and pieces of my desktop such as the Start menu button and some of the task bar.
To correct this, I would need to right click to minimize Firefox, maximize it again, exit fullscreen mode, minimize, then maximize in order for the browser to fully show up without artifacts from the desktop appearing through.
Reproducible: Always
Steps to Reproduce:
1. Open Firefox and use it in Fullscreen mode to surf a bit.
2. Close Firefox completely by clicking the "X" or through mouse gestures WHILE in Fullscreen mode.
3. Relaunch Firefox - This should open Firefox in Fullscreen mode.
4. Minimizing Firefox will cause repaint issues.
Actual Results:
Artifacts from the desktop shows up and Firefox does not appear to be completely minimized. It looks like Firefox is still open, but clicking where the Windows Start Menu should be will open up the menu. I could see bits and pieces of my task bar but not the complete desktop after minimizing Firefox.
Expected Results:
Minimizing Firefox after relaunching it should completely minimize the browser without Firefox repaint issues.
PLEASE NOTE:
The issue is reproduced when:
1. Use Firefox in Fullscreen mode
2. Close the Window while in Fullscreen mode
3. Relaunch Firefox - should be in Fullscreen mode still.
4. Exit out of fullscreen mode (not when minimized).
![]() |
||
Comment 2•15 years ago
|
||
Confirmed with str in comment#1
Mozilla/5.0 (Windows NT 5.1; rv:2.0b11pre) Gecko/20110128 Firefox/4.0b11pre ID:20110128030350
This also happens on Win7 Classic.
Works:
http://hg.mozilla.org/mozilla-central/rev/188670e40942
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101015 Firefox/4.0b8pre ID:20101015070125
Fails:
http://hg.mozilla.org/mozilla-central/rev/5c698ec1841c
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101015 Firefox/4.0b8pre ID:20101015074501
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=188670e40942&tochange=5c698ec1841c
Blocks: 574690
blocking2.0: --- → ?
Component: General → XP Toolkit/Widgets: XUL
Keywords: regression
Product: Firefox → Core
QA Contact: general → xptoolkit.xul
Version: unspecified → Trunk
![]() |
||
Updated•15 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 3•15 years ago
|
||
Jim, this seems to be a regression from you - I don't think this blocks, assuming that the repaint issues go away after you restore the browser.
Alice: please renominate if that assumption is wrong.
blocking2.0: ? → -
![]() |
||
Comment 4•15 years ago
|
||
(In reply to comment #3)
> assuming that the repaint issues go away after you restore the browser.
No, this problem happens after restoring the browser ,
See STR step4 in comment #1.
Windows Taskbar painting also broken. This should be fixed.
blocking2.0: - → ?
![]() |
||
Comment 5•15 years ago
|
||
![]() |
||
Comment 6•15 years ago
|
||
Updated•15 years ago
|
Component: XP Toolkit/Widgets: XUL → Graphics
QA Contact: xptoolkit.xul → thebes
Updated•15 years ago
|
blocking2.0: ? → final+
Whiteboard: [softblocker]
A screenshot to illustrate the painting issues after a browser restore/exit full screen mode. Additionally, this bug can be reproduced after browser restore/minimize window(if in full screen state).
NOTE:
The browser will remain persistent on the screen, even after exiting full screen mode or minimizing after relaunching FF, until you hover your mouse around your desktop items. Desktop items then appear through the browser as seen in the screenshot.
I work around this by guessing where FF is on the Windows Taskbar, right click on FF, select maximize or minimize. This will still break the Windows painting. To get around that, go full screen mode in FF then exit out of full screen mode. After which, the Windows painting is back to normal.
![]() |
Assignee | |
Comment 9•15 years ago
|
||
Does this behavior change if you disable acceleration in advanced options? This looks similar to bug 610763.
![]() |
Assignee | |
Comment 10•15 years ago
|
||
(In reply to comment #9)
> Does this behavior change if you disable acceleration in advanced options? This
> looks similar to bug 610763.
Correction, similar to bug 610713.
Reporter | ||
Comment 11•15 years ago
|
||
(In reply to comment #10)
> (In reply to comment #9)
> > Does this behavior change if you disable acceleration in advanced options? This
> > looks similar to bug 610763.
>
> Correction, similar to bug 610713.
Disabling Hardware Acceleration does not fix the problem for me. Running Windows XP and FFb11.
![]() |
||
Comment 12•15 years ago
|
||
This problem happens regardless of the setting of hardware acceleration option.
![]() |
Assignee | |
Comment 13•15 years ago
|
||
This happens on session restore, we go into full screen prior to showing the window. HideWindowChrome caches the window state bits, which don't have WS_VISIBLE yet. This explains the regression range - it includes the fix for the early window show bug.
Assignee: nobody → jmathies
Attachment #512491 -
Flags: review?
![]() |
Assignee | |
Comment 14•15 years ago
|
||
Comment on attachment 512491 [details] [diff] [review]
refresh visible state patch
Simple two line review.
Attachment #512491 -
Flags: review? → review?(vladimir)
![]() |
Assignee | |
Comment 15•15 years ago
|
||
corrected spelling error.
Attachment #512491 -
Attachment is obsolete: true
Attachment #512494 -
Flags: review?(vladimir)
Attachment #512491 -
Flags: review?(vladimir)
Attachment #512494 -
Flags: review?(vladimir) → review+
![]() |
Assignee | |
Comment 16•15 years ago
|
||
I moved this to Show instead of HideWindowChrome.
![]() |
Assignee | |
Comment 17•15 years ago
|
||
Comment on attachment 512540 [details] [diff] [review]
updated patch
nom'ing per new landing requirements. This is safe patch that fixes an ugly regression on XP/aero basic desktops.
Attachment #512540 -
Flags: approval2.0?
Updated•15 years ago
|
Attachment #512540 -
Flags: approval2.0? → approval2.0+
![]() |
Assignee | |
Comment 18•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 20•15 years ago
|
||
(In reply to comment #19)
> *** Bug 624391 has been marked as a duplicate of this bug. ***
Hi Jim,
I just tested the nightly build and the repaint issues have indeed been corrected. I did notice that when I exit full screen mode, after restoring Firefox, the browser window is no longer in a Maximized state.
Can I put in a vote for having maximized state after exiting full screen?
![]() |
Assignee | |
Comment 21•15 years ago
|
||
(In reply to comment #20)
> (In reply to comment #19)
> > *** Bug 624391 has been marked as a duplicate of this bug. ***
>
> Hi Jim,
>
> I just tested the nightly build and the repaint issues have indeed been
> corrected. I did notice that when I exit full screen mode, after restoring
> Firefox, the browser window is no longer in a Maximized state.
>
> Can I put in a vote for having maximized state after exiting full screen?
Could you provide step to reproduce the issue you are seeing?
Reporter | ||
Comment 22•15 years ago
|
||
(In reply to comment #21)
> (In reply to comment #20)
> > (In reply to comment #19)
> > > *** Bug 624391 has been marked as a duplicate of this bug. ***
> >
> > Hi Jim,
> >
> > I just tested the nightly build and the repaint issues have indeed been
> > corrected. I did notice that when I exit full screen mode, after restoring
> > Firefox, the browser window is no longer in a Maximized state.
> >
> > Can I put in a vote for having maximized state after exiting full screen?
>
> Could you provide step to reproduce the issue you are seeing?
Sorry, I should have clarified. After exiting full screen, the browser is in the restored window state. I would prefer it be in a maximized window state, so this is not a bug, just user input.
![]() |
Assignee | |
Comment 23•15 years ago
|
||
(In reply to comment #22)
> (In reply to comment #21)
> > (In reply to comment #20)
> > > (In reply to comment #19)
> > > > *** Bug 624391 has been marked as a duplicate of this bug. ***
> > >
> > > Hi Jim,
> > >
> > > I just tested the nightly build and the repaint issues have indeed been
> > > corrected. I did notice that when I exit full screen mode, after restoring
> > > Firefox, the browser window is no longer in a Maximized state.
> > >
> > > Can I put in a vote for having maximized state after exiting full screen?
> >
> > Could you provide step to reproduce the issue you are seeing?
>
> Sorry, I should have clarified. After exiting full screen, the browser is in
> the restored window state. I would prefer it be in a maximized window state,
> so this is not a bug, just user input.
I would say file a new bug on exactly what you would like to see. I think we would have an even split of people preferring the two different behaviors, so I'm not sure it would get implemented.
Comment 24•15 years ago
|
||
Verified on Build identifier: Mozilla/5.0 (Windows NT 5.1; rv:2.0b12) Gecko/20100101 Firefox/4.0b12
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•