Bug 629860 - Fix for repaint issues when closing-reopening-restoring from full screen mode. r=vlad, a=final.